# bookdb

./: Cargo.toml  DEFECTS.md  README.md  ___build.rs  bookdb.sqlite  build.rs  setup.sh
docs/: command_surface.md  odx_architecture.md  parity.md
examples/: phase1_tests.rs  phase_17_tests.rs  sanity.rs  stderr_test.rs  stderr_usage.rs  v3_validator_tests.rs
src/: cli.rs  config.rs  context.rs  context_manager.rs  cursor.rs  db.rs  error.rs  info.rs  installation.rs  main.rs  main.rs.bak  models.rs  rdx_stderr.rs  sql-legacy.rs  sql.rs
src/bookdb/: mod.rs  mod.rs.bak
src/bookdb/app/: mod.rs
src/bookdb/app/admin/: install.rs
src/bookdb/app/cli/: dispatch.rs  handlers.rs
src/bookdb/app/ctrl/: cli.rs  dispatch-legacy.rs  dispatch.rs  handlers.rs  mod.rs
src/bookdb/app/sup/: config.rs  error.rs  mod.rs
src/bookdb/oxidize/: config.rs  environment.rs  flag.rs  mod.rs
src/bookdb/service/: db.rs  mod.rs
src/bookdb/service/api/: dec.rs  delv.rs  export.rs  getd.rs  getv.rs  import.rs  inc.rs  ls.rs  migrate.rs  mod.rs  reset.rs  setd.rs  setv.rs  stats.rs  (+2 more)
src/bookdb/utils/: extra.rs  info.rs  macros.rs  mod.rs
src/commands/: dec.rs  export.rs  getd.rs  getv.rs  import.rs  inc.rs  ls.rs  migrate.rs  mod.rs  setd.rs  setv.rs  use.rs
src/db/model/: base.rs  core.rs  keystore.rs  mod.rs  projects.rs  workspace.rs
src/sql/: get_doc_chunk.sql  get_docstore_id.sql  get_project_id.sql  get_var.sql  list_diks.sql  list_docs_v2.sql  list_docstores.sql  list_keys.sql  list_projects.sql  list_segments.sql  list_varstores.sql  resolve_doc_context.sql  resolve_doc_id.sql  resolve_docstore_id.sql  resolve_project_id.sql  upsert_doc_chunk.sql
(+61 files in other folders)
