[package]
name = "bookdb"
version = "0.4.3"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
