[package]
name = "bookdb"
version = "0.4.10"
edition = "2021"
build = "build.rs"


[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
colored = "2"

stderr = { package = "rdx-stderr", version = "0.8" }

[features]
default = ["context-chain-v1"]

# Context chain version features (mutually exclusive)
context-chain-v1 = []
context-chain-v3 = []

# Optional: Development features
dev-both-versions = ["context-chain-v1", "context-chain-v3"]  # For testing/migration


[build-dependencies]
toml = "0.8"


[package.metadata.cargo-allow]
dead_code = true

[package.metadata.sql]
version = "sqlv2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

